--- a/dzen/css/style.css
+++ b/dzen/css/style.css
@@ -355,17 +355,19 @@ body {
             -ms-flex-align: center;
                 align-items: center;
         margin: 125px 71px; }
-        body .about-us .about-us-flex .about-us-slider .move-left {
+        body .about-us .about-us-flex .about-us-slider .move-left img {
           position: absolute;
           -webkit-border-radius: 50%;
                   border-radius: 50%;
           left: -5%;
+          top: 41%;
           padding: 14px 21px;
           color: #5b6ceb;
           -webkit-box-shadow: 6px 6px 9px rgba(0, 0, 0, 0.1);
                   box-shadow: 6px 6px 9px rgba(0, 0, 0, 0.1);
           background-color: #ffffff;
-          cursor: pointer; }
+          cursor: pointer;
+          z-index: 5; }
         body .about-us .about-us-flex .about-us-slider .slider {
           width: 570px;
           height: 300px; }
@@ -373,13 +375,6 @@ body {
             width: 100%;
             height: auto; }
         body .about-us .about-us-flex .about-us-slider .move-right {
-          /* position: absolute;
-											    left: 100%;
-											    background: #ffffff;
-											    border-radius: 50%;
-											    padding: 14px 21px;
-						box-shadow: 6px 6px 9px rgba(0, 0, 0, 0.3);
-						background-color: #ffffff; */
           cursor: pointer; }
           body .about-us .about-us-flex .about-us-slider .move-right img {
             position: absolute;
@@ -1296,7 +1291,8 @@ body {
     body header .body-header .text {
       width: 318px;
       margin: 0 auto;
-      margin-top: 120px; }
+      margin-top: 120px;
+      text-align: center; }
       body header .body-header .text h2 {
         width: 280px;
         margin: 0 15px;
@@ -1482,11 +1478,11 @@ body {
             -ms-flex-align: center;
                 align-items: center;
         margin: 25px auto; }
-        body .about-us .about-us-flex .about-us-slider .move-left {
+        body .about-us .about-us-flex .about-us-slider .move-left img {
           position: absolute;
           -webkit-border-radius: 50%;
                   border-radius: 50%;
-          left: 2%;
+          left: 1%;
           top: 45%;
           padding: 6px 12px;
           color: #5b6ceb;
@@ -1501,13 +1497,6 @@ body {
             width: 100%;
             height: auto; }
         body .about-us .about-us-flex .about-us-slider .move-right {
-          /* position: absolute;
-											    left: 100%;
-											    background: #ffffff;
-											    border-radius: 50%;
-											    padding: 14px 21px;
-						box-shadow: 6px 6px 9px rgba(0, 0, 0, 0.3);
-						background-color: #ffffff; */
           cursor: pointer; }
           body .about-us .about-us-flex .about-us-slider .move-right img {
             position: absolute;
@@ -1852,3 +1841,84 @@ body {
         margin-top: 15px; }
       body .footer .footer-flex .www p:last-child {
         margin-top: 15px; } }
+
+@media screen and (min-width: 450px) and (max-width: 768px) {
+  body header nav {
+    position: fixed;
+    width: 100%;
+    margin: 0 auto;
+    left: 0;
+    top: 0;
+    -webkit-box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.15);
+            box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.15);
+    background-color: #ffffff;
+    z-index: 5; }
+    body header nav .menu-flex {
+      width: 100%;
+      height: 100%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around;
+      -webkit-flex-wrap: nowrap;
+          -ms-flex-wrap: nowrap;
+              flex-wrap: nowrap;
+      text-align: center;
+      margin: 0 auto; }
+      body header nav .menu-flex .block-list-one .list-item, body header nav .menu-flex .block-list-two .list-item {
+        display: inline-block;
+        font-family: "Open Sans";
+        margin: 43px 2px;
+        font-size: 16px;
+        font-weight: 600; }
+        body header nav .menu-flex .block-list-one .list-item a, body header nav .menu-flex .block-list-two .list-item a {
+          color: #555555;
+          font-size: 11px;
+          position: relative;
+          -webkit-transition: all 0.6s;
+          -o-transition: all 0.6s;
+          transition: all 0.6s; }
+          body header nav .menu-flex .block-list-one .list-item a:before, body header nav .menu-flex .block-list-two .list-item a:before {
+            content: "";
+            width: 0;
+            height: 0.1em;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            background: #5363db;
+            -webkit-transition: all 0.3s;
+            -o-transition: all 0.3s;
+            transition: all 0.3s; }
+          body header nav .menu-flex .block-list-one .list-item a:hover, body header nav .menu-flex .block-list-two .list-item a:hover {
+            color: #5363db; }
+            body header nav .menu-flex .block-list-one .list-item a:hover:before, body header nav .menu-flex .block-list-two .list-item a:hover:before {
+              width: 100%;
+              left: 0;
+              background: #5363db; }
+      body header nav .menu-flex .block-list-one {
+        margin-left: 0px;
+        margin-right: 0px; }
+      body header nav .menu-flex .block-list-two {
+        margin: 0 0px; }
+      body header nav .menu-flex .logo {
+        display: block;
+        width: 70px;
+        height: 22px;
+        margin: 0 5px;
+        margin-top: 12px;
+        text-align: center;
+        cursor: pointer; }
+        body header nav .menu-flex .logo img {
+          width: 100%;
+          height: auto; }
+        body header nav .menu-flex .logo h2 {
+          color: #5363db;
+          margin: 0 auto;
+          font-family: "Champagne & Limousines";
+          font-size: 16px;
+          font-weight: 700;
+          text-transform: uppercase;
+          letter-spacing: 2px; } }
